# libwoofer

./: .gitattributes  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  Makefile.fallback  Makefile.in  README.md  configure  configure.ac  envsetup.sh  libwoofer.doap
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: configure-make.yml
data/: org.woofer.metainfo.xml  woofer.pc.in
data/templates/: org.woofer.metainfo.xml  woofer.desktop
doc/: Creating-Front-end.md  General.md  Getting-Involved.md  Getting-Started.md  Home.md  System-Packages.md  Technical-Details.md  _Footer.md  _Sidebar.md
doc/introspection/: WooferRemote_IntrospectionData.xml
doc/templates/: ModuleTemplate.c  ModuleTemplate.h
resources/: .gitignore  resources.gresource.xml
src/: app.c  app.h  authors.h  characters.c  characters.h  constants.h  dlist.c  dlist.h  file_inspector.c  file_inspector.h  intelligence.c  intelligence.h  intelligence_private.h  library.c  library.h  library_private.h  memory.c  memory.h  mpris.c  mpris.h  notifications.c  notifications.h  player.c  player.h  remote.c  remote.h  resources.h  settings.c  settings.h  settings_private.h  song.c  song.h  song_manager.c  song_manager.h  song_metadata.c  song_metadata.h  song_private.h  statistics.c  statistics.h  tweaks.c  (+5 more)
src/static/: gdbus.c  gdbus.h  mediaplayer2.c  mediaplayer2.h  options.c  options.h  resources.c
